dropdown for items

--- a/starter-code/cart.html
+++ b/starter-code/cart.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
-
   <head>
     <title>Bus Mall Store</title>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link href="https://fonts.googleapis.com/css?family=Krub|Marcellus|Monoton|Pacifico" rel="stylesheet">
   </head>
   
   <body>
   
     <header>
-        <h1>Bus Mall Store</h1>
+        <h1 id="title">Bus Mall Store</h1>
         <nav>
-            <ul>
+            <ul id="home">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="cart.html">Cart</a><span id="itemCount"></span></li>
             </ul>
