added CSS and dropdown for items

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -27,7 +27,7 @@
             <h1>Shop Our Catalog</h1>
           </header>
           <div class="copy">
-            <ol>
+            <ol id="list">
               <li>Select an item from our catalog and indicate how many you would like to purchase.</li>
               <li>Once you've made your selection, click the "Add to Cart" button</li>
               <li>When you are ready to purchase, click the "Cart" link above to view your cart and check out</li>
@@ -40,8 +40,8 @@
         <div class="card">
           <div class="copy">
             <form id="catalog">
-              <fieldset>
-                <legend>Catalog</legend>
+              <fieldset id="cart">
+                <legend id="legend">Catalog</legend>
                 <label>
                   <span>Item</span>
                   <select id="items"></select>
